assets/scss/_custom.scss
// ==============================
// Custom style
// 自定义样式
// ==============================
/* Custom styles for the blog
-------------------------------------------------- */
.content p{
  text-align: justify;
}

blockquote{
  border-left: none;
  background: transparent url(../img/blog/pen.png) no-repeat left top;
  background-size: 64px 64px;
  margin: 10px 10px;
  padding: 5px 0px 0px 70px;
  font-style: italic;
  text-align:justify;
  min-height: 70px;
}

blockquote.twitter-tweet{
  background: transparent url(../img/blog/logo_twitter.png) no-repeat left top;
  background-size: 64px 46px;
}

blockquote.twitter-tweet p{
  margin: 10px 10px;
}

.excerpt {
  background: transparent url(../img/blog/book_bg.jpg) no-repeat left top;
  margin: 10px 0px;
  padding: 20px 25px;
  font-style: italic;
  color: #555555;
  text-align:justify;
  min-height: 200px;
}

.recommendation {
  background: transparent url(../img/blog/up_hand.png) no-repeat left top;
  background-size: 64px 64px;
  margin: 10px 10px;
  padding: 5px 0px 0px 70px;
  font-style: italic;
  text-align:justify;
  min-height: 70px;
}

.image {
  margin-bottom: 20px;
  padding-bottom: 0;
}

.image img {
  position: inherit;
}

.image.central {
  padding-bottom: 0;
}

.image.central img {
  margin: auto;
}

.image.lateral {
  max-width:40%;
  margin: 0 1em;
  float:right;
}

.image.lateral img {
  margin-bottom: 10px;
}

.vertical {
  text-align: center;
  max-width: 50%;
  margin: auto;
}

.spacious li {
  margin: 0 0 1rem 0;
}

.caption {
  font-size: 80%;
  text-align: center;
  color: #646464;
}

figcaption {
  font-size: 80%;
  text-align: center;
  color: #646464;
}

article.post h2,
article.post h3,
article.post h4 {
    color: #646464;
}

#socnet-share {
  display: none !important;
}

.slider-container {
  display: flex;
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  margin: 0 -1em
}

.slider-container div {
  flex: 0 0 100%;
  width: 100%;
  object-fit: cover;
  scroll-snap-align: center;
}

.slider-container .image {
  margin: 0 0 10px 0;
}

.raw-video {
  max-width: 100%;
  margin: 0 auto 1rem;
  overflow: hidden;
}

.raw-video > video {
  width: 100%;
  height: auto;
  display: block;
}

